feat: improve footer

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
 
   <title>Mickaël Marchal, CTO + full stack geek</title>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-286065-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-286065-2', { 'anonymize_ip': true });
+  </script>
+
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:900|Yanone+Kaffeesatz:700" rel="stylesheet">
@@ -60,7 +68,7 @@
             <div class="subtitle">@Grand Luxury Group.</div>
           </h1>
           <p>Premier salarié chez
-            <a href="#" data-toggle="modal" data-target="#glg-details">Grand Luxury Group</a> et unique dev durant 5 ans &bull; Conception et réalisation de la platorme e-commerce
+            <a href="#" data-toggle="modal" data-target="#glg-details">Grand Luxury Hotels</a> et unique dev durant 5 ans &bull; Conception et réalisation de la platorme e-commerce
             de la société &bull; Optimisation des performances et du taux de conversion &bull; Product Owner et référent
             métier.
           </p>
@@ -151,9 +159,6 @@
             </p>
 
             <div class="cv-contact-cta">
-              <!-- <p>Je cherche à élargir mes horizons et relever d'autres défis dans une nouvelle structure.<br />
-          Echangeons ensemble et voyons comment je peux contribuer à la réussite de vos projets ! </p>-->
-
               <p>
                 <a href="" class="btn btn-primary btn-arrow" data-toggle="modal" data-target="#js-contact-modal">
                   <span>Me contacter</span>
@@ -175,21 +180,20 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h3 class="modal-title">Grand Luxury Group</h3>
+            <h3 class="modal-title">À propos de Grand Luxury Hotels</h3>
           </div>
           <div class="modal-body">
-            <p>Crée en 2007, Grand Luxury Group est le spécialiste européen du voyage de luxe sur internet : La société propose
+            <p>Crée en 2007, Grand Luxury Hotels est le spécialiste européen du voyage de luxe sur internet : La société propose
               la réservation de 450 hôtels d'exception à travers le monde.</p>
             <ul>
               <li>Les plus beaux hôtels du monde, triés sur le volet.</li>
               <li>Un service personnalisé via un conseiller dédié.</li>
-              <li>Des avantages exclusifs pour les membres du L Club.</li>
-              <li>Un suivi attentif de chaque client dès la réservation.</li>
-              <li>Partenaire des plus grands chaînes hôtelières du monde.</li>
+              <li>Des avantages exclusifs à travers un programme de fidélité.</li>
+              <li>Une relation privilégiée avec les plus grands chaînes hôtelières du monde.</li>
             </ul>
             <p>
-              <strong>En 10 ans, et en s'appuyant sur sa plateforme technique, Grand Luxury est devenu le 2
-                <sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement
+              <strong>En 10 ans, et en s'appuyant sur la plateforme technique que j'ai conçue, Grand Luxury est devenu le 2<sup>ème</sup>
+                apporteur d'affaires mondial pour les Palaces de Paris, Londres et Milan &mdash; avec seulement
                 60 salariés.</strong>
             </p>
             <p>On en parle sur :
@@ -197,16 +201,14 @@
               <a href="http://bfmbusiness.bfmtv.com/mediaplayer/video/le-rendez-vous-du-luxe-grand-luxury-hotels-un-site-de-reservation-d-hotels-selectif-1809-982037.html">BFM Business</a>
             </p>
             <p>
-              <a href="https://fr.grandluxuryhotels.com">Visiter Grand Luxury Hotels</a>
+              <a href="https://fr.grandluxuryhotels.com" class="btn btn-primary">Visiter Grand Luxury Hotels</a>
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
           </div>
         </div>
-        <!-- /.modal-content -->
       </div>
-      <!-- /.modal-dialog -->
     </div>
 
     <div class="js-nav-publications container" id="publications">
@@ -469,32 +471,23 @@
     <div class="container footer">
       <footer>
         <div class="row">
-          <div class="col-sm-8">
-              <p>&copy; 2001-2017 Mickaël Marchal. Tous droits réservés.</p>
-              <div class="legal-terms">
-                <p>Site hébergé par Gandi.net - 63-65 boulevard Masséna 75013 Paris - Tel +33 (0) 1 70.37.76.61</p>
-                <p>Ce site utilise les projets open-source
-                  <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a>,
-                  <a href="http://fontawesome.io" rel="nofollow">Font Awesome</a>,
-                  <a href="https://jquery.com" rel="nofollow">jQuery</a>,
-                  <a href="https://momentjs.com" rel="nofollow">moment.js</a>,
-                  <a href="https://piwik.org" rel="nofollow">Piwik</a>,
-                  <a href="https://github.com/alykoshin/gmail-send" rel="nofollow">Gmail-send</a>,
-                  <a href="http://l-lin.github.io/font-awesome-animation" rel="nofollow">Font Awesome animation</a>.
-                </p>
-              </div>  
-      
-          </div>
-          <div class="col-sm-4">
-              <h3>Merci d'être passé ;)</h3>
-              <p>Merci d'avoir visité mon site !</p>
-              <p>
-                  <a href="" class="btn btn-default btn-arrow" data-toggle="modal" data-target="#js-contact-modal">
-                    <span>Me contacter</span>
-                  </a>
-                </p>
-        
-          </div>
+          <img src="favicon.png" class="footer-logo" alt="Logo du site">
+          <p>&copy; 2001-2017 Mickaël Marchal. Tous droits réservés. &mdash;
+              <a href="" data-toggle="modal" data-target="#js-contact-modal">
+                <em class="fa fa-envelope-o"></em> Contact
+              </a>
+          </p>
+          <div class="legal-terms">
+            <p>Site hébergé par Gandi.net - 63-65 boulevard Masséna 75013 Paris - Tel +33 (0) 1 70.37.76.61</p>
+            <p>Ce site utilise les projets open-source
+              <a href="https://getbootstrap.com" rel="nofollow">Bootstrap</a>,
+              <a href="http://fontawesome.io" rel="nofollow">Font Awesome</a>,
+              <a href="https://jquery.com" rel="nofollow">jQuery</a>,
+              <a href="https://momentjs.com" rel="nofollow">moment.js</a>,
+              <a href="https://github.com/alykoshin/gmail-send" rel="nofollow">Gmail-send</a>,
+              <a href="http://l-lin.github.io/font-awesome-animation" rel="nofollow">Font Awesome animation</a>.
+            </p>
+          </div>  
         </div>
       </footer>
     </div>
