chore: remove old files

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="Profil et page personnelle de Mickaël Marchal, CTO et développeur full-stack chez Grand Luxury Group.">
+  <meta name="description" content="Profil et page personnelle de Mickaël Marchal, CTO et développeur full-stack chez Grand Luxury Hotels.">
   <meta name="author" content="Mickaël Marchal">
   <link rel="icon" href="favicon.png">
 
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-7">
           <h1>CTO + full stack geek
-            <div class="subtitle">@Grand Luxury Group.</div>
+            <div class="subtitle">@Grand Luxury Hotels.</div>
           </h1>
           <p>Premier salarié chez
             <a href="#" data-toggle="modal" data-target="#glg-details">Grand Luxury Hotels</a> et unique dev durant 5 ans &bull; Conception et réalisation de la platorme e-commerce
@@ -191,7 +191,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
               <span aria-hidden="true">&times;</span>
             </button>
             <h3 class="modal-title">À propos de Grand Luxury Hotels</h3>
@@ -414,7 +414,7 @@
 
         <div class="modal-content hidden" id="js-contact-form-error">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
               <span aria-hidden="true">&times;</span>
             </button>
             <h3 class="modal-title">Oups.</h3>
@@ -434,7 +434,7 @@
 
         <div class="modal-content hidden" id="js-contact-form-success">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
               <span aria-hidden="true">&times;</span>
             </button>
             <h3 class="modal-title">C'est fait !</h3>
@@ -453,7 +453,7 @@
 
         <div class="modal-content" id="js-contact">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
               <span aria-hidden="true">&times;</span>
             </button>
             <h3 class="modal-title" id="contact-form-title">Me contacter</h3>
