fix: add link to medium articles to feed

--- a/public/index.html
+++ b/public/index.html
@@ -640,7 +640,7 @@
           icon: 'medium',
           className: 'medium',
           action: 'nouvel article publié sur medium.com',
-          html: '<h3>' + data.title + '</h3>'
+          html: '<h3>' + data.title + '</h3><p>' + data.excerpt + '… <a href="'+ data.url +'">Lire l\'article &raquo;</a></p>' 
         };
       },
 
