fix: small UI corrections

--- a/public/index.html
+++ b/public/index.html
@@ -417,7 +417,7 @@
 
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Fermer sans envoyer</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
               <button type="submit" class="btn btn-primary">Envoyer</button>
             </div>
           </form>
